fixed posts overlapping issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -101,6 +101,7 @@ a.join {
 }
 
 .all_posts {
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
